cluster/apps/gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: monitoring-system
  labels:
    app.kubernetes.io/name: gatus
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
    spec:
      containers:
        - name: gatus
          image: twinproduction/gatus:v3.6.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 30Mi
            limits:
              cpu: 250m
              memory: 100Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: gatus-configs
              mountPath: /config
              readOnly: true
          startupProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
      volumes:
        - name: gatus-configs
          configMap:
            name: gatus-configs
