cluster/apps/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: monitoring-system
  labels:
    app.kubernetes.io/name: gatus
spec:
  selector:
    app.kubernetes.io/name: gatus
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
  type: ClusterIP
