cluster/apps/gatus/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  labels:
    app.kubernetes.io/name: gatus
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`status.${SECRET_DOMAIN_1}`)
      middlewares:
        - name: headers@file
        - name: local-only@file
      services:
        - name: gatus
          port: 8080
          namespace: monitoring-system
  tls:
    secretName: ${SECRET_CERT_NAME_1}-prod-tls
